--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jasonntruong.github.io",
   "version": "0.1.0",
-  "homepage": "/jasonntruong.github.io/",
+  "homepage": "/jasonntruong.github.io/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
