--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-slide-fade-in": "^1.0.9",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
